# chronic-disease-management

./: .gitignore  AGENTS.md  GEMINI.md  docker-compose.yml  pyproject.toml
agent/: .env.example  pyproject.toml
agent/app/: config.py  main.py
agent/app/agent/: graph.py  ingestion.py
agent/app/graph/: graph.py  memory.py  security.py  state.py
agent/app/rag/: embedding_validation.py  embeddings.py  evaluation.py  ingestion.py  prompt.py  query_rewrite.py  retrieval.py
agent/app/routers/: internal.py
agent/app/schemas/: internal.py
agent/app/tasks/: worker.py
agent/app/vectorstore/: base.py  milvus.py
agent/scripts/: clear_alembic.py  evaluate_rag.py  reset_db.py  validate_embeddings.py
agent/skills/example/: SKILL.md
agent/tests/: test_agent_runtime.py  test_agent_service.py  test_basic.py  test_config.py  test_document_service.py  test_graph.py  test_ingestion.py  test_ingestion_pipeline.py  test_knowledge_api.py  test_main.py  test_markdown_loader.py  test_permission_catalog.py  test_rag_chat_service.py  test_rag_conversation.py  test_rag_prompt.py  test_rag_tool.py  test_vectorstore.py
agent/tests/integration/: test_arq_document_tasks.py  test_chat_route_integration.py  test_minio_document_storage.py
backend/: .env.example  commit_msg.txt  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 12c3eabda525_upgrade_rbac_multi_role_and_soft_delete.py  2be6d0f6337a_merge_a1b2c3d4e5f6_and_e7c4a1b29f10.py  4a8d017d2725_enable_rls_policies.py  4aa7f5802d29_merge_heads.py  4cf086a0a0c3_initial_schema.py  50de6f1ad6be_upgrade_rbac_to_standard_v3.py  5c8b4c7a9e21_add_failed_reason_to_documents.py  9a92f65eca42_add_system_settings_table.py  a1b2c3d4e5f6_add_updated_at_and_indexes.py  a24a8417991b_switch_to_jsonb_for_rbac.py  a6ac5d955734_switch_to_snowflake_id.py  a92280d61859_merge_heads.py  af7a0fa5ce51_add_composite_indexes_for_rls_.py  b1c2d3e4f5a6_add_hnsw_vector_index.py  d08f011b680f_tenant_organization_split_v2.py  d867a38ac709_enforce_snowflake_id_rls_globally.py  d9a0b6e7f321_fix_patient_profile_multitenant_uniqueness.py  de7f2cd89913_add_recursive_org_and_fix_rls.py  e12c3eabda53_add_rls_to_rbac_tables.py  e7c4a1b29f10_add_patient_id_to_documents.py  e9fdb0e5a9c8_fix_rls_deadlock_and_protect_missing_tables.py  fad6eafd57fa_add_menus_table.py  rls_policies_001_deploy_rls.py
backend/app/: main.py  seed.py
backend/app/api/: api.py  deps.py
backend/app/base/: config.py  database.py  exceptions.py  middleware.py  security.py  snowflake.py  storage.py
backend/app/core/: config.py  middleware.py  security.py  snowflake.py  storage.py
backend/app/db/: seed_data.py  seed_menus.py  seed_rbac.py  session.py
backend/app/models/: __init__.py  api_key.py  audit.py  base.py  chat.py  health_metric.py  knowledge.py  manager.py  menu.py  organization.py  patient.py  rbac.py  settings.py  tenant.py  user.py
backend/app/plugins/: provider_compat.py  registry.py
backend/app/repositories/: __init__.py  api_key_repo.py  audit_repo.py  auth_repo.py  base.py  conversation_repo.py  dashboard_repo.py  family_repo.py  health_metric_repo.py  kb_repo.py  manager_repo.py  menu_repo.py  org_invitation_repo.py  org_repo.py  org_user_repo.py  patient_repo.py  role_repo.py  settings_repo.py  tenant_repo.py  usage_repo.py  user_repo.py
backend/app/routers/: __init__.py  deps.py
backend/app/schemas/: admin.py  api_key.py  common.py  document.py  family.py  health_metric.py  manager.py  menu.py  organization.py  patient.py  rbac.py  user.py
backend/app/services/: audit.py  chat.py  conversation_context.py  document_parser.py  embedding_validation.py  embeddings.py  llm.py  provider_registry.py  query_rewrite.py  quota.py  rag.py  rag_evaluation.py  rag_ingestion.py  rbac.py  reranker.py  settings.py  storage.py
backend/app/tasks/: worker.py
backend/app/telemetry/: logging.py  setup.py  tracing.py
backend/scripts/: cleanup_mixins.py  clear_alembic.py  drop_all_tables.py  evaluate_rag.py  reset_db.py  sync_permissions.py  validate_embeddings.py
backend/tests/: conftest.py  integration_test.py  test_agent_runtime.py  test_agent_service.py  test_architecture_convergence.py  test_document_service.py  test_ingestion_pipeline.py  test_main.py  test_manager_workbench.py  test_middleware.py  test_permission_catalog.py  test_plugin_registry.py  test_provider_service.py  test_rag_chat_service.py  test_rls_integration.py  test_rls_migration.py  test_telemetry.py  test_tenant_architecture.py
backend/tests/api/: __init__.py  conftest.py  test_admin_organizations.py  test_chat.py  test_chat_agent.py  test_chat_sse.py  test_conversations.py  test_crud_gaps.py  test_document_status.py  test_documents.py  test_health_metrics.py  test_kb_stats.py  test_login_flow.py  test_password_change.py  test_product_gaps.py
backend/tests/fixtures/: rag_cases.json
backend/tests/integration/: test_arq_document_tasks.py  test_chat_route_integration.py  test_minio_document_storage.py
backend/tests/services/: __init__.py  test_agent_business_skills.py  test_agent_graph.py  test_agent_memory.py  test_agent_security.py  test_agent_skills_base.py  (+31 more)
(+827 files in other folders)
