[project]
name = "cdm-agent"
version = "0.1.0"
description = "AI Agent middleware for chronic disease management"
requires-python = ">=3.10"
dependencies = [
    # Web 框架
    "fastapi>=0.135.1",
    "uvicorn>=0.41.0",
    "orjson>=3.11.7",
    "python-multipart>=0.0.22",

    # 向量数据库
    "pymilvus>=2.4.0",

    # AI / LLM
    "openai>=2.29.0",
    "langgraph>=1.1.6",
    "tiktoken>=0.12.0",

    # 文档解析
    "pymupdf>=1.27.2.2",
    "pdfplumber>=0.11.9",
    "pytesseract>=0.3.13",

    # 配置与工具
    "pydantic-settings>=2.13.1",
    "redis>=7.3.0",
    "tenacity>=9.1.4",

    # 异步任务
    "arq>=0.25.0",

    # 对象存储（读取待解析文件）
    "aioboto3>=13.0.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.9",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
