[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "langchain-core>=1.2.30",
    "langchain-milvus>=0.3.3",
    "langchain-openai>=1.1.13",
    "langgraph>=1.1.6",
    "pydantic>=2.13.1",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0.3",
    "sse-starlette>=3.3.4",
    "tiktoken>=0.12.0",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
