[project]
name = "ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aioboto3>=7.0.0",
    "argon2-cffi>=25.1.0",
    "arq>=0.25.0",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "boto3>=1.42.68",
    "email-validator>=2.3.0",
    "fastapi>=0.135.1",
    "langchain-core>=1.2.19",
    "langchain-openai>=1.1.11",
    "langchain-text-splitters>=1.1.1",
    "passlib>=1.7.4",
    "pgvector>=0.4.2",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.1",
    "pymupdf>=1.27.2.2",
    "python-multipart>=0.0.22",
    "redis>=7.3.0",
    "sqlalchemy>=2.0.48",
    "tenacity>=9.1.4",
    "tiktoken>=0.12.0",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "alembic>=1.18.4",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
